# cmake

vid1/: CMakeLists.txt
vid2/: CMakeLists.txt  main.cpp
vid2/my_library/: CMakeLists.txt  my_library.cpp  my_library.h
vid3/: CMakeLists.txt
vid3/otherBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
vid4/: CMakeLists.txt  main.cpp
